k3sdeploys/plex/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-nfs-test
  namespace: plex
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
    volumeMounts:
    - name: nfs-volume
      mountPath: /mnt/nfs
    securityContext:
      privileged: true
  volumes:
  - name: nfs-volume
    persistentVolumeClaim:
      claimName: plex-nfs-pvc
