k3sdeploys/plex/busydebug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: plex
spec:
  containers:
  - name: debug-container
    image: busybox
    command: [ "sleep", "infinity" ]
    securityContext:
      privileged: true
