k3sdeploys/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex
  name: plex
  namespace: plex
spec:
  ports:
  - name: "port-tcp-http"
    port: 8080
    nodePort: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app: plex
  sessionAffinity: None
  type: NodePort
